Linking html to css

--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheets" href="stylesheets/home.css">
+    <link rel="stylesheet" href="../stylesheets/home.css">
     <title>Welcome! {{.Name}}</title>
 </head>
 <body>
